@@ -1,3 +1,9 @@
+2007-06-17  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: If we get errors on OpenSession try
+	  to send RESET USB control message to the device
+	  to reset it / clear buffered stuff.
+
 2007-06-15  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Nikon Coolpix series capture now determines
